fixed fonts not showing on github

--- a/oncollaboration.css
+++ b/oncollaboration.css
@@ -2,14 +2,14 @@
    worden door jullie projecten */
    @font-face{
     font-family: "inter";
-    src: url(/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf),
-    url(/fonts/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf);
+    src: url(./fonts/Inter/Inter-VariableFont_opsz\,wght.ttf),
+    url(./fonts/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf);
 }
 
  @font-face {
     font-family: "jost" ;
-    src: url(/fonts/Jost/Jost-VariableFont_wght.ttf),
-    url(/fonts/Jost/Jost-Italic-VariableFont_wght.ttf);
+    src: url(./fonts/Jost/Jost-VariableFont_wght.ttf),
+    url(./fonts/Jost/Jost-Italic-VariableFont_wght.ttf);
  }
 
 
